<?xml version="1.0"?>
<package format="2">
  <name>wolf_msgs</name>
  <version>0.0.1</version>
  <description>
        The wolf_msgs package includes messages and services used with WoLF.
  </description>

  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>

  <author>Gennaro Raiola</author>

  <license>GNU General Public License v3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>generate_messages</exec_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

</package>
