<?xml version="1.0"?>
<package format="2">
  <name>wolf_msgs</name>
  <version>0.0.1</version>
  <description>
        The wolf_msgs package includes messages and services used with WoLF.
  </description>

  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>

  <author>Gennaro Raiola</author>

  <license>GNU General Public License v3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

</package>
